k8s_deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-app
  labels:
    app: wisecow
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
      - name: wisecow-container
        image: aniket8339/wisecow:latest
        ports:
        - containerPort: 4499
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"

---
apiVersion: v1
kind: Service
metadata:
  name: wisecow-svc
spec:
  selector:
    app: wisecow
  ports:
    - port: 80
      targetPort: 4499
  type: ClusterIP

---
# ingress for external access + TLS
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisecow-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - aniket-wisecow.com
    secretName: wisecow-tls-secret
  rules:
  - host: aniket-wisecow.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wisecow-svc
            port:
              number: 80
